modified basic html templates

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Travel Recommendation</title>
+        <title>TravelBloom</title>
         <link rel="stylesheet" href="./travel_recommendation.css">
     </head>
     <body>
-        <nav><h1>TravelBloom</h1>
+        <nav><h2>TravelBloom</h2>
             <ul>
               <li><a href="./travel_recommendation.html" id="home">Home </a></li>
               <li><a href="./travel_about.html" id="about">About Us </a></li>
@@ -16,5 +16,12 @@
               <li><button id='btnClear'>Clear</button></li>
             </ul>
         </nav>
+        <h1>Explore Dream Destination</h1>
+        <h3>
+            It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
+        </h3>
+        <button id='btnBooking'>Book Now</button>
+        <a href="discord.gg" id="discord_social">Discord </a>
+        <a href="x.com" id="x_social">X/Twitter </a>
     </body>
 </html>
