completed basic html templates

--- a/travel_contact.html
+++ b/travel_contact.html
@@ -14,7 +14,7 @@
             </ul>
         </nav>
         <h1>Contact Us</h1>
-        <h4>Get in touch</h4>
+        <p>Get in touch!</p>
         <form id="contactForm">
             <div>
                 <label for="name">Name</label>
@@ -30,7 +30,11 @@
             </div>
             <button type="submit" onclick="thankyou()">Submit</button>
         </form>
-
+        <script>
+            function thankyou(){
+                alert('Thank you for contacting us!')
+            }
+        </script>
         <a href="discord.gg" id="discord_social">Discord </a>
         <a href="x.com" id="x_social">X/Twitter </a>
     </body>
