final commit hopefully

--- a/travel_about.html
+++ b/travel_about.html
@@ -20,18 +20,12 @@
             Feel free to explore our website to learn more about what we offer!
         </p>
         <h1>Our Team</h1>
-        <h3>
-            Johnny Storm
-            Founder, CEO
-        </h3>
-        <h3>
-            Clint Barton
-            Marketing Head
-        </h3>
-        <h3>
-            Yelena Belova
-            Tour Agent
-        </h3>
+        <h3>Johnny Storm</h3>
+        <h4>Founder, CEO</h4>
+        <h3>Clint Barton</h3>
+        <h4>Marketing Head</h4>
+        <h3>Yelena Belova</h3>
+        <h4>Tour Agent</h4>
         <a href="discord.gg" id="discord_social">Discord </a>
         <a href="x.com" id="x_social">X/Twitter </a>
     </body>
